@@ -10,7 +10,8 @@ b2005-04-07  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-prefs.c:
 	Don't write NULL strings to GConf, and remove tests which may
-	crash.
+	crash. Unselect the profile option box when there is no profile in
+	gconf.
 
 	* src/sj-util.c:
 	Handle NULL devices safely.
